<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.drogan.simplecalculatortaxi.CalculatorActivity">

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:id="@+id/distanceTextView" />

    <EditText
        android:id="@+id/eDistanse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/distanceTextView"
        android:ems="3"
        android:textSize="16dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/restoredFuel"
        android:text="@string/fuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:layout_below="@+id/distanceTextView"
        />
    <EditText
        android:id="@+id/eFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/restoredFuel"
        android:ems="3"
        android:textSize="16dp"
        android:text="8.5"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/costFuel"
        android:text="@string/cost_fuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:layout_below="@+id/restoredFuel"
        />
    <EditText
        android:id="@+id/eCostFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/costFuel"
        android:ems="3"
        android:text="41.40"
        android:textSize="16dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />

    <TextView
        android:id="@+id/takenMoney"
        android:text="@string/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:layout_below="@+id/costFuel"
        />
    <EditText
        android:id="@+id/eMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/takenMoney"
        android:ems="3"
        android:textSize="16dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />
    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:layout_below="@+id/takenMoney"

        android:width="150dp"/>
    <TextView
        android:id="@+id/text_income"
        android:text="@string/text_for_income"
        android:textSize="14dp"
        android:layout_below="@id/calc_button"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/income"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_alignBaseline="@id/text_income"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_clear_income"
        android:text="@string/text_for_clear_income"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/text_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/clear_income"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_alignBaseline="@id/text_clear_income"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_commission"
        android:text="@string/comission"
        android:textSize="14dp"
        android:layout_below="@id/text_clear_income"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginRight="16dp"
        android:id="@+id/commission"
        android:textSize="14dp"
        android:layout_alignBaseline="@id/text_commission"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_gasoline"
        android:layout_below="@id/text_commission"
        android:text="@string/expense_on_gasoline"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/expence_gasoline"
        android:textSize="14dp"
        android:layout_alignBaseline="@id/text_gasoline"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save"

        android:layout_gravity="center"
        android:text="@string/save"
        android:textSize="14dp"
        android:height="60dp"
        android:width="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_gasoline"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginTop="37dp" />

    <ImageView
        android:layout_width="178dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/img0001"
        android:id="@+id/imageView4"
        android:layout_below="@id/text_gasoline"
        android:layout_alignParentStart="true" />

</RelativeLayout>
